@@ -11,7 +11,8 @@ AM_CPPFLAGS =	-I$(top_srcdir) \
 			-DSYSCONFDIR=\""${sysconfdir}/${PACKAGE}"\" \
 			-DLIBDIR=\""${libdir}/${PACKAGE}"\" \
 			-DQT5DOCSDIR=\""${with_qt5_docdir}"\" \
-			-DGTKSUPATH=\""${with_gsu_path}"\"
+			-DGTKSUPATH=\""${with_gsu_path}"\" \
+			-D_DEBUGLEVEL_=${with_debug_level}
 
 LIBS =	$(GTK_LIBS) \
 	$(X11_LIBS) \
