@@ -1325,9 +1325,11 @@ void openFromTab(GtkMenuItem* widget,pageStruct* page)
 	ERRDATA
 	char*		filepath=NULL;
 
+	openInThisTab=gtk_notebook_get_current_page(mainNotebook);
 	asprintf(&filepath,"%s/%s",page->dirName,gtk_menu_item_get_label(widget));
 	openFile(filepath,0,true);
 	ERRDATA debugFree(&filepath,"openFromTab filepath");
+	openInThisTab=-1;
 }
 
 bool tabPopUp(GtkWidget *widget, GdkEventButton *event,gpointer user_data)
